--- a/public/frontend/register.html
+++ b/public/frontend/register.html
@@ -1,44 +1,24 @@
-<?php
-    require '../config/database.php';
-
-    if($_SERVER['REQUEST_METHOD'] == 'POST')
-    {
-        if(empty($_POST['email']) || empty($_POST['password'])){
-            echo 'Please fill in all fields';
-            die();
-        }
-        $stmt = $conn->prepare('SELECT * FROM users WHERE email = :email');
-        $stmt->execute(['email'=>$_POST['email']]);
-        $user = $stmt->fetch();
-
-        if ($user && password_verify($_POST['password'], $user['password'])) {
-            session_start();
-            $_SESSION['user_id'] = $user['id'];
-            $_SESSION['username'] = $user['username'];
-            header('Location: index.php'); 
-            exit();
-        } else {
-            echo 'Invalid Credentials';
-        }
-    }
-?>
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="../css/auth.css">
 </head>
 <body>
     <div class="container-fluid login-container">
         <div class="row justify-content-center"> 
             <div class="col img-container">
-                <img alt="alternative" src="images/AdSpace.png">
+                <img alt="alternative" src="../images/AdSpace.png">
             </div>
-            <div class="col-6" style="padding-top: 25px;">
-                <h1>Login here</h1>
-                <form action="login.php" method="post">
+            <div class="col-6">
+                <h1>Register here</h1>
+                <form action="../backend/register.php" method="post" id="form">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" aria-describedby="username" placeholder="Enter username">
+                    </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
                         <input type="email" class="form-control" id="email" name="email" aria-describedby="email" placeholder="Enter email">
@@ -47,9 +27,9 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                     </div>
-                    <button type="submit">Login</button>
+                    <button type="submit">Register</button>
                 </form>
-                <p>Don't have an account?<a href="register.php">Register</a></p>
+                <p>Already have an account?<a href="login.html">Login</a></p>
             </div>
         </div>
     </div>
@@ -59,12 +39,24 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+
 <script>
     document.querySelector('#form').addEventListener('submit', function(e){
         e.preventDefault();
-        if(document.querySelector('#email').value === '' || document.querySelector('#password').value === ''){
+
+        const email = document.querySelector('#email').value.trim();
+        const password = document.querySelector('#password').value.trim();
+        const username = document.querySelector('#username').value.trim();
+
+        if(email == '' || password == '' || username == ''){
             alert('Please fill in all fields');
         }else{
+            const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/;
+
+            if(!passwordRegex.test(password)){
+                alert('Password must contain at least 8 characters, one uppercase, one lowercase, one number and one special character');
+                return;
+            }
             this.submit();
         }
     });
